; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_CleanCommon.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_CleanCommon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.discovery_sys = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.discovery_sys*)* @CleanCommon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CleanCommon(%struct.discovery_sys* %0) #0 {
  %2 = alloca %struct.discovery_sys*, align 8
  store %struct.discovery_sys* %0, %struct.discovery_sys** %2, align 8
  %3 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %4 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %3, i32 0, i32 2
  %5 = call i32 @atomic_store(i32* %4, i32 1)
  %6 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %7 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @vlc_join(i32 %8, i32* null)
  %10 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %11 = call i32 @items_clear(%struct.discovery_sys* %10)
  %12 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %13 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mdns_destroy(i32 %14)
  %16 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %17 = call i32 @free(%struct.discovery_sys* %16)
  ret void
}

declare dso_local i32 @atomic_store(i32*, i32) #1

declare dso_local i32 @vlc_join(i32, i32*) #1

declare dso_local i32 @items_clear(%struct.discovery_sys*) #1

declare dso_local i32 @mdns_destroy(i32) #1

declare dso_local i32 @free(%struct.discovery_sys*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
